--- a/bigdata-week6/.gitignore
+++ b/bigdata-week6/.gitignore
@@ -1,1 +1,24 @@
+##ignore this file##
 .idea/
+/target/
+.classpath
+.project
+.settings
+bigdata-week6.iml
+bigdata.iml
+##class file##
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
